sample-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts: 
    - blog.staging.frontiersi.io
    secretName: blog-kubernetes-tls
  rules:
  - host: blog.staging.frontiersi.io
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: 80
